2007-01-18  Sven Schuetz

	* array.c, cimXmlParser.c, client.c, value.c, cimXmlParser.h
	Fixed 1637057: Arrays not yet supported as function arguments

2007-01-18  Viktor Mihajlovski  <mihajlov@dyn-9-152-143-119.boeblingen.de.ibm.com>

	* cimXmlResp.y: 
	Fixed 1636714: removed incorrect rquirement for RETURNVALUE tag
	in method responses.

2006-12-06  Viktor Mihajlovski  <mihajlov@localhost.localdomain>

	* sfcUtil/hashtable.c, sfcUtil/libsfcUtil.Versions:
	Fixed 1610514: aligned sfcc/sfcb libsfcUtil.

2006-11-28  Viktor Mihajlovski  <mihajlov@dyn-9-152-143-50.boeblingen.de.ibm.com>

	* cimXmlParser.c, cimXmlResp.y, client.c: 
	Fixed 1604433: memory leaks for instance array properties and out
	args.

2006-11-14  Viktor Mihajlovski  <mihajlov@dyn-9-152-143-50.boeblingen.de.ibm.com>

	* client.c: 
	Fixed 1596171: don't report timeout after system clock changes.

2006-09-12  Viktor Mihajlovski  <mihajlov@dyn-9-152-143-50.boeblingen.de.ibm.com>

	* client.c, configure.ac: 
	Conditionalized generation of "TE: Trailer" header in support of
	older curl versions.

2006-09-06  Viktor Mihajlovski  <mihajlov@dyn-9-152-143-50.boeblingen.de.ibm.com>

	* client.c: 
	Removed the inline qualifier for callback functions (again).

	* cimXmlResp:
	Remove shift/reduce conflict.
	
2006-09-05  Viktor Mihajlovski  <mihajlov@dyn-9-152-143-50.boeblingen.de.ibm.com>

	* client.c: 
	Fixed a double memory release error, occuring when a CIMStatus trailer
	is sent back by the server.

2006-08-22  dhowell1

	* cimXmlParser.c, cimXmlParser.h, cimXmlResp.y, client.c, cmcimacs.h,
        datetime.c, enumeration.c, instance.c, Makefile.am, objectpath.c,
        value.c,
	* libcmpisfcc.Versions, libsfcUtil.Versions, libcimcClient.Versions

        Merged Intel changes with 08/17/06 CVS tip.

2006-07-17	sschuetz

	* hashtable.c, utilFactory.c, utilHashtable.c, utilStringbuffer.c:
	Moved to sfcUtil, build as shared library now

2006-07-06 sschuetz

	* constclass.c: