@@ -8,6 +8,7 @@ development of additional language frontends (bindings).
 
 New Features
 - 1654163: Restructure for pluggable backends
+- 1654428: Removed obsolete libsfcUtil
 
 Changes in 1.1.1:
 =================
